--- a/client/users.jade
+++ b/client/users.jade
@@ -2,7 +2,7 @@ template(name='residents')
     .ui.left.icon.fluid.input
         i.search.icon
         input.username_search(type='text' placeholder='lookup resident...' autofocus='autofocus')
-    .ui.centered.four.stackable.cards
+    .ui.centered.five.stackable.cards
         each residents
             +resident
             
