--- a/components/maintenance/healthclub.jade
+++ b/components/maintenance/healthclub.jade
@@ -63,7 +63,7 @@ template(name='healthclub')
                             div
                             +health_club_info
                         .column
-                            h1.ui.header www.goldrun.online
+                            //- h1.ui.header www.goldrun.online
                             .ui.header health club hours
                             .ui.grid
                                 .row
