--- a/components/request.jade
+++ b/components/request.jade
@@ -2,7 +2,7 @@ template(name='request_card_template')
     .ui.fluid.secondary.segment.grid
         .row
             .sixteen.wide.column
-                h1.ui.inline.grey.header #{title}
+                a.ui.inline.grey.f10.header(href="/request/#{_id}/view") #{title}
         .row
             //- .four.wide.column
                 
@@ -21,7 +21,6 @@ template(name='request_card_template')
                     .ui.black.large.label #{this}
                 div
                 +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
-    
                 +voting
                 div
                 if currentUser
@@ -34,25 +33,28 @@ template(name='request_card_template')
                     //- i.right.chevron.icon
                 +author_info
             .four.wide.column
-                if grabber_id
-                    .ui.small.grey.header grabbed by #{grabber.name} {{ from_now grab_timestamp }}
-                    if is_grabber
-                        .ui.button.release release
-                    else 
-                        .ui.button.join_waitlist(title='auto grab if released') join waitlist
-                else 
-                    .ui.large.button.grab grab
-                .ui.header waitlist
-                each waitlist
-                    .ui.small.header #{user_id}
-                    .ui.small.header #{add_timestamp}
-                    .ui.small.header #{position }
-                    
+                +grab_button
                 .ui.small.grey.header #{views} views
                 .ui.small.grey.header #{points} points
                 .ui.small.grey.header #{comment_count} comments
                 
 
+
+template(name='grab_button')
+    if grabber_id
+        .ui.small.grey.header grabbed by #{grabber.name} {{ from_now grab_timestamp }}
+        if is_grabber
+            .ui.button.release release
+        else 
+            .ui.button.get_on_deck(title='auto grab if released') get on deck
+    else 
+        .ui.large.button.grab grab
+    .ui.header on deck
+    .ui.small.header #{on_deck_id}
+    if is_on_deck
+        .ui.button remove on deck
+        
+        
 
 
 template(name='request_edit')
@@ -77,6 +79,7 @@ template(name='request_edit')
                     +text_edit key='contact_info' label='contact info' direct=true
                 .four.wide.column 
                     +number_edit key='dollars_offered' label='dollars offered' direct=true
+                    +number_edit key='estimated_materials_cost' label='estimated materials cost' direct=true
                     .ui.grey.header estimated time
                     +number_edit key='estimated_minutes' label='minutes' direct=true
                     +float_edit key='estimated_hours' label='hours' direct=true
@@ -103,10 +106,17 @@ template(name='request_view')
                     +array_view key='location_tags' label='location tags' direct=true
                     +array_view key='tags' label='tags' direct=true
                     +single_user_view key='resident' label='resident' direct=true
-                    +text_view key='contact_info' label='contact info' direct=true
+                    +grab_button
+                    if is_grabber
+                        div
+                        .ui.small.grey.inline contact/delivery info
+                        .ui.inline.header #{contact_info}
+                    .ui.hidden.divider
                     +comments
                 .four.wide.column 
                     +request_history
+                    div
+                    +number_view key='estimated_materials_cost' label='estimated materials cost' direct=true
                     +request_time
                     
 template(name='request_history')
@@ -116,8 +126,8 @@ template(name='request_history')
     .ui.list
         each request_events
             .item #{text} #{when}
-            if can_edit 
-                +remove_button
+                if can_edit 
+                    +remove_button
             
             
 template(name='request_time')
@@ -128,3 +138,6 @@ template(name='request_time')
     .ui.header #{when}
     .ui.header estimated time to complete
     .ui.header actual request duration
+    .ui.small.grey.header estimated time to complete
+    +number_view key='estimated_minutes' label='minutes' direct=true
+    +float_view key='estimated_hours' label='hours' direct=true
